don’t use getFirst for Java17 compatibility